# siot

./: .editorconfig  .gitignore  README.md  pyproject.toml  siot.py
.github/workflows/: tests.yml
examples/pytest_cut_mixed/: CMakeLists.txt  cut.h  cut_tests.c  main.c  mixed.c  mixed.h
examples/pytest_cut_mixed/py_tests/: conftest.py  test_io.py  test_using_cut.py
examples/pytest_echocat/: CMakeLists.txt
examples/pytest_echocat/tests/: conftest.py  test_cat.py  test_echocat_cat.py  test_echocat_echo.py  test_echocat_exit.py
examples/pytest_hello/: CMakeLists.txt  hello.c
examples/pytest_hello/tests/: conftest.py  test_sanity_hello.py
examples/unittest_echocat/: echocat.c
examples/unittest_echocat/tests/: shared.py  test_cat.py  test_echo.py
tests/: conftest.py  test_examples.py  test_siott.py
